[package]
name = "olympus"
version = "0.1.0"
edition = "2021"
authors = ["AvatoLabs"]
description = "Olympus blockchain implementation in Rust"
license = "MIT"

[dependencies]
# Core blockchain types
ethereum-types = "0.14"
primitive-types = "0.12"
rlp = "0.5"

# Cryptography
secp256k1 = { version = "0.28", features = ["recovery", "rand"] }
sha3 = "0.10"
keccak-hash = "0.5"
blake2 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
# Elliptic curve cryptography
ark-ec = "0.4"
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"
# Modular exponentiation
num-bigint = "0.4"

# EVM implementation
revm = "29.0"

# Database
sled = "0.34"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
libp2p = { version = "0.53", features = ["tcp", "yamux", "noise", "kad", "identify"] }
quinn = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Math and big integers
num-traits = "0.2"

# Threading and synchronization
parking_lot = "0.12"
dashmap = "5.0"

# Configuration
config = "0.13"
toml = "0.8"

# HTTP server for RPC
warp = "0.3"
hyper = "0.14"
